HAWQ-1195. Fixed error "Two or more external tables use the same error table "

The error table should be works same as normal user table on hdfs, which support multiple INSERTs.